<resources>
    <string name="app_name">podo</string>
    <string name="WELCOME"> Welcome to Podo</string>
    <string name="WELCOME_MSG">"Received 20 points as a sign up gift.

- Things you can do with points
1. Lesson: Unlock Special Lessons
2. Reading: Unlock Readings
3. Writing: Ask a Korean teacher for correction

- How to collect points
1. Complete General Lessons
2. Watch video ads (in profile page)
3. Attend for 7 days in a row
4. Purchase"</string>
    <string name="EMAIL"> Email</string>
    <string name="PASSWORD"> Password</string>
    <string name="PASSWORD_SIX_CHARACTERS_LONG">Should be at least 6 characters</string>
    <string name="WRONG_EMAIL"> Wrong email!!</string>
    <string name="WRONG_PASS"> Wrong password!!</string>
    <string name="EMAIL_EXIST">This email already exists</string>
    <string name="FORGOT_PASS"> Forgot Password?</string>
    <string name="INPUT_EMAIL">Input your email</string>
    <string name="CHECK_YOUR_EMAIL">Please check your email</string>
    <string name="SIGNIN"> Sign In</string>
    <string name="SIGNIN_WITH"> or sign in with</string>
    <string name="FACEBOOK"> Facebook</string>
    <string name="GOOGLE"> Google</string>
    <string name="WECHAT"> Wechat</string>
    <string name="DONT_HAVE_ACCOUNT"> Don\'t have an account?</string>
    <string name="SIGNUP"> Sign up</string>
    <string name="NAME">Name</string>
    <string name="CONFIRM_PASS">Confirm Password</string>
    <string name="ALREADY_HAVE_ACCOUNT"> Already have an account?</string>
    <string name="GOOGLE_FAILED">Google sign in failed</string>
    <string name="FACEBOOK_FAILED">Facebook sign in failed</string>
    <string name="SIGNUP_SUCCEED">Sign up succeeded</string>
    <string name="SIGNUP_FAILED">Sign up failed</string>
    <string name="SIGNIN_SUCCEED">Sign in succeeded</string>
    <string name="SIGNIN_FAILED">Sign in failed</string>
    <string name="ENGLISH">English</string>
    <string name="THAI">Thai</string>
    <string name="JAPANESE">Japanese</string>
    <string name="CHINESE">Chinese</string>
    <string name="KOREAN">Korean</string>
    <string name="LESSON">Lesson</string>
    <string name="READING">Reading</string>
    <string name="WRITING">Writing</string>
    <string name="COLLECTION">Collection</string>
    <string name="PROFILE_OPTION">Profile/Option</string>
    <string name="MESSAGE">Message</string>
    <string name="CONFIRM_EXIT">Do you want to exit podo?</string>
    <string name="YES">Yes</string>
    <string name="NO">No</string>
    <string name="SAVE">Save</string>
    <string name="CANCEL">Cancel</string>
    <string name="CONFIRM_QUIT_LESSON">"Do you want to go back to main?\n(You can be rewarded points when you finish the lesson)"</string>
    <string name="CONFIRM_QUIT">"Do you want to go back to main?"</string>
    <string name="HANGUL">Hangul</string>
    <string name="CONSONANT">Consonant</string>
    <string name="VOWEL">Vowel</string>
    <string name="BATCHIM">Batchim</string>
    <string name="ASSEMBLY">Assembly</string>
    <string name="NUMBERS">Numbers</string>
    <string name="NUMBERS_INTRO_TITLE">How to say numbers in Korean</string>
    <string name="NUMBERS_INTRO">"Many Korean learners think Korean numbers are really difficult.
Because there are two systems of Korean numbers(Sino-Korean number / Native-Korean number) and you should use each number system depending on what the number is used for.
Therefore whenever students say numbers, they are confused about which system of number to use.

In general, each number system is used in the following situations:

1.Sino-Korean number: Number itself
2.Native-Korean number: Counting numbers

But when you learn Korean numbers, you can see that this rule is not always correct.
(For example, why the hour is Native-Korean number but the minute is Sino-Korean number?)

So I suggest to students
'Just listen and follow the correct number a lot. Then you will feel something strange right before you try to use the wrong number.'

This lesson is designed to learn Sino-Korean number and Native-Korean number
as well as to practice the numbers repeatedly in different situations.

Let's practice until '일시 오분' and '십살' seem strange!"</string>
    <string name="SINO_NUMBER">Sino-Korean number</string>
    <string name="NATIVE_NUMBER">Native-Korean number (1~99)</string>
    <string name="PRACTICE">Practice</string>
    <string name="SINO">sino</string>
    <string name="NATIVE">native</string>
    <string name="TIME">time</string>
    <string name="MONEY">money</string>
    <string name="DATE">date</string>
    <string name="AGE">age</string>
    <string name="IN_ORDER">In order</string>
    <string name="INTRO">Intro</string>
    <string name="HINT">Hint</string>
    <string name="SPECIAL_LESSON">Special lesson</string>
    <string name="COMPLETED">Completed</string>
    <string name="PRONUNCIATION">Pronunciation: </string>
    <string name="ANTONYMS">Antonyms: </string>
    <string name="SYNONYMS">Synonyms: </string>
    <string name="USES_IN_SENTENCE">Uses in sentence: </string>
    <string name="ADD_COLLECTION">Add Collection</string>
    <string name="RETURN">Return</string>
    <string name="PLAY">Play</string>
    <string name="STOP">Stop</string>
    <string name="FINISH">Finish</string>
    <string name="SELECT_BOX">Select a box</string>
    <string name="CONGRATULATION">Congratulation</string>
    <string name="GET_POINT">Get the points</string>
    <string name="UNLOCK">Do you want to unlock this by using points?</string>
    <string name="UNLOCK_FAILED">You don\'t have points enough.</string>
    <string name="UNLOCK_SUCCEEDED">Unlock succeeded</string>
    <string name="GET_MORE_READING">Get more readings</string>
    <string name="GO_BACK_MY_READING">Go back to my readings</string>
    <string name="NORMAL">Normal</string>
    <string name="SPEED">Speed x0.8</string>
    <string name="CORRECTION">Correction</string>
    <string name="WRITING_SAVED">Writing is saved</string>
    <string name="WRITING_DELETE">Are you sure want to delete this writing?</string>
    <string name="LETTERS">letters</string>
    <string name="WRITE_HERE">Write here</string>
    <string name="REVIEWED">Reviewed</string>
    <string name="REVIEWING">Reviewing</string>
    <string name="REQUEST_RESULT">Request is submitted. You\'ll get the feedback in 2days.</string>
    <string name="ORIGINAL_WRITING">Original Writing</string>
    <string name="CORRECTED_WRITING">Corrected Writing</string>
    <string name="FEEDBACK">Feedback</string>
    <string name="STUDENT_FEEDBACK">Student\'s Feedback</string>
    <string name="GIVE_US_FEEDBACK">Give us your feedback</string>
    <string name="THANKYOU_FEEDBACK">Thank you for your feedback</string>
    <string name="SEND">Send</string>
    <string name="TIPS_CORRECTION">
        You can ask for a correction from a native Korean teacher by using 1 point per 1 letter.
        Feedback will be provided in 100% Korean.
        (Inappropriate writing such as abusive language may be rejected)
    </string>
    <string name="ANSWER">Answer</string>
    <string name="NEXT">Next</string>
    <string name="STUDY">Study</string>
    <string name="DELETE">Delete</string>
    <string name="RECORD">Record</string>
    <string name="COLLECTION_DELETE">Are you sure you want to delete this collection?</string>
    <string name="RANDOM">Random</string>
    <string name="RECENT_WORD">Recent word</string>
    <string name="NO_COLLECTION">Collect your own flashcards here and practice repeatedly. You can collect them by pressing the star button in lessons and readings. You can also press the \'+\' button to add it yourself.</string>
    <string name="FRONT">Front</string>
    <string name="BACK">Back</string>
    <string name="COLLECTION_SAVED">Collection is saved</string>
    <string name="COLLECTION_SYNCHRONISED">Collection is synchronized</string>
    <string name="PROFILE">Profile / Option</string>
    <string name="ATTENDANCE">Attendance (sunday-saturday)</string>
    <string name="GET">Get</string>
    <string name="EDIT_NAME">Edit Name</string>
    <string name="PURCHASE_PACKAGE">Purchase package</string>
    <string name="EVALUATION_APP">Evaluate this app</string>
    <string name="HISTORY">History of requests</string>
    <string name="RECOMMEND">Recommend this app</string>
    <string name="GET_POINTS_BY_AD">Get points by watching ads</string>
    <string name="GET_POINTS_BY_PURCHASING">Get points by purchasing</string>
    <string name="AD_LOAD_FAILED">Failed to load ad. Please try it again.</string>
    <string name="AD_DISPLAY_FAILED">Failed to display ad</string>
    <string name="BUG_REPORT">Report bug or suggestions</string>
    <string name="LOG_OUT">Log out</string>
    <string name="SAVE_NEW_NAME">Saved new name</string>
    <string name="UPDATED_USERNAME">Updated user name</string>
    <string name="UPDATED_USERNAME_FAILED">User name update failed</string>
    <string name="SIGN_OUT">Sign Out</string>
    <string name="SIGN_OUT_MESSAGE">Do you want to sign out?</string>
    <string name="GO_PREMIUM">Go Premium</string>
    <string name="ALREADY_SUBSCRIBE">You are already subscribed.</string>
    <string name="THANKS_PURCHASING">Thank you for your purchasing.</string>
    <string name="ERROR_SAVE_POINT_DB">Failed to save new points on database</string>
    <string name="PREMIUM_POLICY">Your Google account will be charged at confirmation of purchase.
        Subscription will be automatically renewed as soon as your subscription expires.
        If you don\'t want to renew your subscription, you can manage it from Google account settings.
        Subscriptions that have already been paid are not refundable.
    </string>
    <string name="SUBSCRIBE_OPTION_A">Monthly</string>
    <string name="SUBSCRIBE_OPTION_B">Yearly</string>
    <string name="SUBSCRIBE_OPTION_C">Lifetime</string>
    <string name="SUBSCRIBE_OPTION_A_PRICE">$3</string>
    <string name="SUBSCRIBE_OPTION_B_PRICE">$20</string>
    <string name="SUBSCRIBE_OPTION_C_PRICE">$80</string>
    <string name="BEST_VALUE">Best Value</string>
    <string name="GET_PODO_PREMIUM">Get podo premium</string>
    <string name="NO_ADS">No Ads</string>
    <string name="NO_ADS_DETAIL">You can focus on learning without advertising.</string>
    <string name="UNLOCKED_LESSONS">Unlocked Lessons</string>
    <string name="UNLOCKED_LESSONS_DETAIL">All special lessons and readings will be unlocked.</string>
    <string name="UNLIMITED_COLLECTIONS">Unlimited Collections</string>
    <string name="UNLIMITED_COLLECTIONS_DETAIL">You can collect unlimited flash cards.</string>
    <string name="GET_PODO_POINTS">Get podo points</string>
    <string name="GET_PODO_POINTS_DETAIL">
        You can use points to unlock the special lessons and readings or to ask Korean native teachers to correct your Korean writing.
    </string>
    <string name="PURCHASE_POINTS">Purchase Points</string>
    <string name="POINT_OPTION_A">100 points</string>
    <string name="POINT_OPTION_B">1,000 points</string>
    <string name="POINT_OPTION_C">500 points</string>
    <string name="POINT_OPTION_A_PRICE">$2</string>
    <string name="POINT_OPTION_B_PRICE">$18</string>
    <string name="POINT_OPTION_C_PRICE">$10</string>
    <string name="POINT_POLICY">Your Google account will be charged at confirmation of purchase.
        This purchase is one-time purchase. Points that have already been paid are not refundable.
    </string>
    <string name="NOW_AVAILABLE">Now available</string>
    <string name="ON_VACATION">On vacation</string>
    <string name="REQUIRE">Require: </string>
    <string name="YOU_HAVE">You have: </string>
    <string name="TOPUP">Top Up</string>
    <string name="SUBMITE">Submit</string>
    <string name="TEACHERS">Teachers</string>
    <string name="MAIN_00_TITLE">Hangul</string>
    <string name="MAIN_01_TITLE">Greetings</string>
    <string name="MAIN_02_TITLE">Conjugation</string>
</resources>