<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="250dp"
    android:paddingTop="50dp"
    android:background="#F6F7F7">

    <TextView
        android:text="@string/GET_PODO_PREMIUM"
        android:textSize="20dp"
        android:textColor="#0A2459"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <ImageView
        android:src="@drawable/no_ads"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:text="@string/UNLOCKED_LESSONS"
        android:textSize="20dp"
        android:textColor="#0A2459"
        android:textStyle="bold"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:text="@string/UNLOCKED_LESSONS_DETAIL"
        android:textSize="15dp"
        android:textColor="#BCBCBC"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>