<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="250dp"
    android:paddingTop="50dp"
    android:background="@color/FOGGY">

    <TextView
        android:text="@string/GET_PODO_PREMIUM"
        android:textSize="20dp"
        android:textColor="@color/NAVY"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <ImageView
        android:src="@drawable/unlimited"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:text="@string/UNLIMITED_COLLECTIONS"
        android:textSize="20dp"
        android:textColor="@color/NAVY"
        android:textStyle="bold"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:text="@string/UNLIMITED_COLLECTIONS_DETAIL"
        android:textSize="15dp"
        android:textColor="@color/GREY_TEXT"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>