<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".purchase.Subscribe">

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/viewPager"
        android:background="@color/WHITE"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/indicator"
        android:layout_width="match_parent"
        android:layout_height="0dp"/>

    <me.relex.circleindicator.CircleIndicator
        android:id="@+id/indicator"
        app:ci_drawable="@drawable/bg_circle_navy"
        app:ci_height="7dp"
        app:ci_width="7dp"
        app:ci_margin="4dp"
        android:gravity="center"
        android:background="@color/FOGGY"
        android:paddingBottom="20dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toTopOf="@id/price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>


    <ImageView
        android:id="@+id/btnClose"
        android:src="@drawable/close_grey"
        android:layout_marginRight="20dp"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:id="@+id/price"
        android:padding="10dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toTopOf="@id/btnPremium"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/subscribeA"
            android:background="@drawable/bg_grey_10"
            android:layout_marginTop="40dp"
            android:padding="20dp"
            android:gravity="center_horizontal"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/FOGGY"
                android:textColor="@color/GREY_TEXT"
                android:text="@string/SUBSCRIBE_OPTION_A" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:text="@string/SUBSCRIBE_OPTION_A_PRICE"
                android:textStyle="bold"
                android:textColor="@color/BLACK"
                android:textSize="20dp" />

            <ImageView
                android:id="@+id/checkSubscribeA"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/check_blue"
                android:visibility="gone" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/subscribeB"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:paddingBottom="20dp"
            android:background="@drawable/bg_grey_10_stroke_navy"
            android:gravity="center_horizontal"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="match_parent">
            <TextView
                android:background="@drawable/bg_navy_10_top"
                android:text="@string/BEST_VALUE"
                android:textColor="@color/WHITE"
                android:textStyle="bold"
                android:padding="10dp"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:background="@color/FOGGY"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textColor="@color/GREY_TEXT"
                android:text="@string/SUBSCRIBE_OPTION_B" />
            <TextView
                android:text="@string/SUBSCRIBE_OPTION_B_PRICE"
                android:textColor="@color/BLACK"
                android:textSize="20dp"
                android:textStyle="bold"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <ImageView
                android:id="@+id/checkSubscribeB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/check_blue" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/subscribeC"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginTop="40dp"
            android:layout_weight="1"
            android:background="@drawable/bg_grey_10"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/FOGGY"
                android:textColor="@color/GREY_TEXT"
                android:text="@string/SUBSCRIBE_OPTION_C" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:text="@string/SUBSCRIBE_OPTION_C_PRICE"
                android:textColor="@color/BLACK"
                android:textSize="20dp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/checkSubscribeC"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/check_blue"
                android:visibility="gone" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btnPremium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/bg_purple_10"
        android:text="@string/GO_PREMIUM"
        android:textAllCaps="false"
        android:textColor="@color/WHITE"
        app:layout_constraintBottom_toTopOf="@id/policy"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/policy"
        android:layout_margin="20dp"
        android:text="@string/PREMIUM_POLICY"
        android:textSize="15dp"
        android:textColor="@color/GREY_TEXT"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</androidx.constraintlayout.widget.ConstraintLayout>