<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ConfirmQuit">

    <LinearLayout
        android:id="@+id/confirmQuit"
        android:padding="30dp"
        android:gravity="center_horizontal"
        android:background="@drawable/bg_white_20"
        android:elevation="10dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:orientation="vertical">

        <ImageView
            android:src="@drawable/popup_podo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/CONFIRM_QUIT"
            android:textSize="20dp"
            android:textColor="@color/BLACK"
            android:layout_marginTop="50dp"
            />

        <LinearLayout
            android:layout_marginTop="50dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btnNo"
                android:text="@string/NO"
                android:textAllCaps="false"
                android:textColor="@color/PURPLE"
                android:background="@drawable/bg_white_30_stroke_purple"
                android:layout_weight="1"
                android:layout_marginRight="10dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>

            <Button
                android:id="@+id/btnYes"
                android:text="@string/YES"
                android:textAllCaps="false"
                android:textColor="@color/WHITE"
                android:background="@drawable/bg_purple_30"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>